// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "name": "Please enter a name",
  "reasons": "ReasonList should contian at least one reason category.",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "name": "Please enter a name",
  "reasons": "ReasonList should contian at least one reason category.",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "name": false,
  "reasons": "ReasonList should contian at least one reason category.",
}
`;
